[gd_scene load_steps=20 format=2]

[ext_resource path="res://Shop/Shop.gd" type="Script" id=1]
[ext_resource path="res://Assets/Shop/Background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Shop/NextDay.png" type="Texture" id=3]
[ext_resource path="res://Assets/Shop/NextDay-Hover.png" type="Texture" id=4]
[ext_resource path="res://Assets/Shop/Dumbbell.png" type="Texture" id=5]
[ext_resource path="res://Assets/Shop/Dumbbell-Hover.png" type="Texture" id=6]
[ext_resource path="res://Assets/Shop/FoamRoller.png" type="Texture" id=7]
[ext_resource path="res://Assets/Shop/FoamRoller-Hover.png" type="Texture" id=8]
[ext_resource path="res://Assets/Shop/Coffee.png" type="Texture" id=9]
[ext_resource path="res://Assets/Shop/Coffee-Hover.png" type="Texture" id=10]
[ext_resource path="res://Assets/Shop/Dialog-Background.png" type="Texture" id=11]
[ext_resource path="res://Assets/Others/SourceSansPro-Regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Assets/Shop/Dialog-Price.png" type="Texture" id=13]
[ext_resource path="res://Others/CustomText.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Shop/ButtonBuy.png" type="Texture" id=15]
[ext_resource path="res://Assets/Shop/ButtonBuy-Hover.png" type="Texture" id=16]
[ext_resource path="res://Assets/Shop/Instruction.png" type="Texture" id=17]
[ext_resource path="res://Assets/Shop/Transition.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 12 )

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="NextDay" type="TextureButton" parent="."]
margin_left = 984.0
margin_top = 873.0
margin_right = 1248.0
margin_bottom = 947.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Dumbbell" type="TextureButton" parent="."]
margin_left = 58.0
margin_top = 657.0
margin_right = 391.0
margin_bottom = 840.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="DialogPos" type="Node2D" parent="Dumbbell"]
position = Vector2( 228.467, -47.7338 )

[node name="FoamRoller" type="TextureButton" parent="."]
margin_left = 466.0
margin_top = 474.0
margin_right = 655.0
margin_bottom = 838.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="DialogPos" type="Node2D" parent="FoamRoller"]
position = Vector2( 103.852, -0.108826 )

[node name="Coffee" type="TextureButton" parent="."]
margin_left = 971.0
margin_top = 591.0
margin_right = 1160.0
margin_bottom = 847.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="DialogPos" type="Node2D" parent="Coffee"]
position = Vector2( 45.5896, -3.3938 )

[node name="Dialog" type="Control" parent="."]
visible = false
margin_right = 370.0
margin_bottom = 350.0

[node name="Background" type="Sprite" parent="Dialog"]
texture = ExtResource( 11 )
centered = false

[node name="Label" type="Label" parent="Dialog"]
margin_left = 20.0
margin_top = 31.0
margin_right = 362.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Life gets stronger.

Spend Life to Exercise."
autowrap = true

[node name="PriceLabel" type="Sprite" parent="Dialog"]
position = Vector2( 186.806, 198.182 )
texture = ExtResource( 13 )

[node name="Price" parent="Dialog" instance=ExtResource( 14 )]
position = Vector2( 125.136, 256.259 )
font_size = 36
text = "30/100"
aligned = 2

[node name="Buy" type="TextureButton" parent="Dialog"]
margin_left = 262.846
margin_top = 224.526
margin_right = 346.846
margin_bottom = 275.526
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 16 )

[node name="Instruction" type="TextureRect" parent="."]
margin_left = 24.0
margin_top = 23.0
margin_right = 1254.0
margin_bottom = 113.0
texture = ExtResource( 17 )

[node name="Transition" type="TextureButton" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 18 )

[connection signal="pressed" from="NextDay" to="." method="_on_NextDay_pressed"]
[connection signal="pressed" from="Dialog/Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="Transition" to="." method="_on_Transition_pressed"]
